# backend-tech-task

./: .env.example  ADR.md  LEARNED.md  README.md  docker-compose.yaml
app/: Dockerfile  analytics.py  config.py  db.py  docker-compose.yaml  helpers.py  main.py  messaging.py  models.py  pyproject.toml  worker.py
app/cli/: import_events.sh
app/tests/: run_tests.sh  test_idempotency.py  test_integration.py
mongodb/: docker-compose.yaml
rabbitmq/: docker-compose.yaml
